--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -2,6 +2,6 @@ FROM nginx:1.23.4-alpine3.17-slim
 
 RUN rm -f /etc/nginx/conf.d/*
 
-COPY nginx.conf /etc/nginx/conf.d/sample_app_nginx.conf
+COPY nginx.conf /etc/nginx/conf.d/app_nginx.conf
 
 #CMD /usr/sbin/nginx -g 'daemon off;' -c /etc/nginx/nginx.conf
