- ECSで動作するように設定変更 - 名前の最適化など微修正

--- a/compose.production_test.yaml
+++ b/compose.production_test.yaml
@@ -15,18 +15,18 @@ services:
       context: .
       args:
         - APP_NAME=sample_app
-        - RAILS_ENV=${RAILS_ENV:-production} # 本来はdevelopmentで環境変数でproductionを指定してやる必要がある
-        - NODE_ENV=${NODE_ENV:-production} # 本来はdevelopmentで環境変数でproductionを指定してやる必要がある
-    image: sample_app_rails_web:0.0.1
-    container_name: sample_app_rails_web
+        - RAILS_ENV=${RAILS_ENV:-production}
+        - NODE_ENV=${NODE_ENV:-production}
+    image: sample_app_rails_web:prd
+    container_name: sample_app_rails_web.prd
     volumes:
-      - sample_tmp:/sample_app/tmp
-      - sample_public:/sample_app/public
+      - sample_app_tmp:/sample_app/tmp
+      - sample_app_public:/sample_app/public
     env_file:
       - .env # test
     environment:
-      RAILS_MASTER_KEY: xxxx # test
-      SECRET_KEY_BASE: xxxx # test
+      RAILS_MASTER_KEY: xxxxxxxxxxxxxxxxxxxx # set your key
+      SECRET_KEY_BASE: xxxxxxxxxxxxxxxxxxxxx # set your key
     ports:
       - "3000:3000"
     tty: true
@@ -36,16 +36,16 @@ services:
   sample_app_nginx:
     build:
       context: docker/nginx
-    image: sample_app_nginx:0.0.1
-    container_name: sample_app_nginx
+    image: sample_app_nginx:prd
+    container_name: sample_app_nginx.prd
     volumes:
-      - sample_tmp:/sample_app/tmp
-      - sample_public:/sample_app/public
+      - sample_app_tmp:/sample_app/tmp:ro
+      - sample_app_public:/sample_app/public:ro
     ports:
       - 80:80
     depends_on:
       - sample_app_rails_web
 volumes:
   sample_app_postgres:
-  sample_tmp:
-  sample_public:
+  sample_app_tmp:
+  sample_app_public:
