--- a/config/database.yml
+++ b/config/database.yml
@@ -23,11 +23,12 @@ default: &default
   host: <%= ENV['POSTGRES_HOST'] %>
   username: <%= ENV['POSTGRES_USER'] %>
   password: <%= ENV['POSTGRES_PASSWORD'] %>
-  database: <%= ENV['POSTGRES_DB'] %>
+  database: <%= ENV['POSTGRES_DB'] %>_<%= Rails.env %>
 
 development:
   <<: *default
   # database: src_development
+  database: <%= ENV['POSTGRES_DB'] %>_<%= Rails.env %><%= ENV['TEST_ENV_NUMBER'] %>
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -62,6 +63,7 @@ development:
 test:
   <<: *default
   # database: src_test
+  database: <%= ENV['POSTGRES_DB'] %>_<%= Rails.env %><%= ENV['TEST_ENV_NUMBER'] %>
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
