--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,6 +29,9 @@ jobs:
           ruby-version: .ruby-version
           bundler-cache: true
 
+      - name: Check if rubocop-performance is installed
+        run: gem list rubocop-performance
+
       - name: rubocop
         uses: reviewdog/action-rubocop@v2
         with:
