--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,6 +31,7 @@ jobs:
 
       - name: Check if rubocop-performance is installed
         run: gem list rubocop-performance
+        shell: bash
 
       - name: rubocop
         uses: reviewdog/action-rubocop@v2
