--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,8 @@
 inherit_from: .rubocop_todo.yml
 
+inherit_gem:
+  rubocop-discourse: default.yml
+
 require:
   - rubocop-performance
   - rubocop-rails
