--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,8 +11,9 @@ require:
 AllCops:
   NewCops: enable
   Exclude:
-    - "bin/**/*"
-    - "db/**/*"
+    - 'bin/**/*'
+    - 'db/**/*'
+    - 'vendor/**/*'
 
 Style/AsciiComments:
   Enabled: false
