--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -57,14 +57,14 @@ jobs:
           ruby-version: .ruby-version
           bundler-cache: true
 
-      - name: Setup Node
-        uses: actions/setup-node@v3
-        with:
-          node-version-file: '.node-version'
-          cache: 'yarn'
+#      - name: Setup Node
+#        uses: actions/setup-node@v3
+#        with:
+#          node-version-file: '.node-version'
+#          cache: 'yarn'
 
-      - name: Yarn install
-        run: yarn install --frozen-lockfile
+#      - name: Yarn install
+#        run: yarn install --frozen-lockfile
 
       - name: Cache assets
         uses: actions/cache@v3
