--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -32,8 +32,8 @@ jobs:
             image_name: sample_app_nginx
 
     outputs:
-      image_rails: ${{ steps.push_rails.outputs.image }}
-      image_nginx: ${{ steps.push_nginx.outputs.image }}
+      image_rails: ${{ steps.set-image.outputs.image_rails }}
+      image_nginx: ${{ steps.set-image.outputs.image_nginx }}
 
     steps:
       - name: Check out code
@@ -68,8 +68,11 @@ jobs:
           tags: ${{ steps.login-ecr.outputs.registry }}/${{ matrix.image_name }}:${{ steps.build-tag.outputs.tag }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+      - name: Output image tag
+        id: set-image
         run: |
-          echo "image=${{ steps.login-ecr.outputs.registry }}/${{ matrix.image_name }}:${{ steps.build-tag.outputs.tag }}" >> $GITHUB_OUTPUT
+          echo "image_${{ matrix.app }}=${{ steps.login-ecr.outputs.registry }}/${{ matrix.image_name }}:${{ steps.build-tag.outputs.tag }}" >> $GITHUB_OUTPUT
 
   render_task_definition_and_deploy:
     needs: build_and_push
