--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -25,9 +25,11 @@ jobs:
         app: ['rails', 'nginx']
         include:
           - app: rails
+            build_context: .
             dockerfile: ./Dockerfile
             image_name: sample_app_rails_web
           - app: nginx
+            build_context: ./docker/nginx
             dockerfile: ./docker/nginx/Dockerfile
             image_name: sample_app_nginx
 
@@ -64,7 +66,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
-          context: .
+          context: ${{ matrix.build_context }}
           file: ${{ matrix.dockerfile }}
           tags: ${{ steps.login-ecr.outputs.registry }}/${{ matrix.image_name }}:${{ steps.build-tag.outputs.tag }}
           cache-from: type=gha
