--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -34,8 +34,8 @@ jobs:
             image_name: sample_app_nginx
 
     outputs:
-      image_rails: ${{ steps.set-image.outputs.image_rails }}
-      image_nginx: ${{ steps.set-image.outputs.image_nginx }}
+      image_rails: ${{ steps.set-image-rails.outputs.image_rails }}
+      image_nginx: ${{ steps.set-image-nginx.outputs.image_nginx }}
 
     steps:
       - name: Check out code
@@ -72,10 +72,15 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      - name: Output image tag
-        id: set-image
-        run: |
-          echo "image_${{ matrix.app }}=${{ steps.login-ecr.outputs.registry }}/${{ matrix.image_name }}:${{ steps.build-tag.outputs.tag }}" >> $GITHUB_OUTPUT
+      - name: Output image tag for rails
+        id: set-image-rails
+        if: matrix.app == 'rails'
+        run: echo "image_rails=${{ steps.login-ecr.outputs.registry }}/${{ matrix.image_name }}:${{ steps.build-tag.outputs.tag }}" >> $GITHUB_OUTPUT
+
+      - name: Output image tag for nginx
+        id: set-image-nginx
+        if: matrix.app == 'nginx'
+        run: echo "image_nginx=${{ steps.login-ecr.outputs.registry }}/${{ matrix.image_name }}:${{ steps.build-tag.outputs.tag }}" >> $GITHUB_OUTPUT
 
   render_task_definition_and_deploy:
     needs: build_and_push
