--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -75,12 +75,17 @@ jobs:
       - name: Output image tag for rails
         id: set-image-rails
         if: matrix.app == 'rails'
-        run: echo "image_rails=${{ steps.login-ecr.outputs.registry }}/${{ matrix.image_name }}:${{ steps.build-tag.outputs.tag }}" >> $GITHUB_OUTPUT
+        run: echo "image_rails=${{ steps.login-ecr.outputs.registry }}/${{ matrix.image_name }}:${{ steps.build-tag.outputs.tag }}" >> "$$GITHUB_ENV"
 
       - name: Output image tag for nginx
         id: set-image-nginx
         if: matrix.app == 'nginx'
-        run: echo "image_nginx=${{ steps.login-ecr.outputs.registry }}/${{ matrix.image_name }}:${{ steps.build-tag.outputs.tag }}" >> $GITHUB_OUTPUT
+        run: echo "image_nginx=${{ steps.login-ecr.outputs.registry }}/${{ matrix.image_name }}:${{ steps.build-tag.outputs.tag }}" >> "$$GITHUB_ENV"
+
+      - name: Debug Image Tags
+        run: |
+          echo "Image Rails Tag: ${{ steps.set-image-rails.outputs.image_rails }}"
+          echo "Image Nginx Tag: ${{ steps.set-image-nginx.outputs.image_nginx }}"
 
       - name: Debug Image Tags
         run: |
