--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -141,3 +141,6 @@ jobs:
           service: ${{ secrets.ECS_SERVICE_NAME }}
           cluster: ${{ secrets.ECS_CLUSTER_NAME }}
           wait-for-service-stability: true
+          codedeploy-appspec: aws/appspec.json
+          codedeploy-application: ${{ secrets.CODE_DEPLOY_APPLICATION }}
+          codedeploy-deployment-group: ${{ secrets.CODE_DEPLOY_DEPLOYMENT_GROUP }}
