--- a/compose.production_test.yaml
+++ b/compose.production_test.yaml
@@ -15,7 +15,6 @@ services:
       context: .
       target: production
       args:
-        - APP_NAME=sample_app
         - RAILS_ENV=production
         - NODE_ENV=production
     image: sample_app_rails_web:prd
@@ -33,7 +32,7 @@ services:
       - sample_app_db
   sample_app_nginx:
     build:
-      context: docker/nginx
+      context: ./docker/nginx
     image: sample_app_nginx:prd
     container_name: sample_app_nginx.prd
     volumes:
