--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -11,7 +11,7 @@ server {
   #    root   /usr/share/nginx/html;
   #    index  index.html index.htm;
   #}
-  root   /var/www/sample_app/public;  
+  root   /sample_app/public;
 
   error_page  404              /404.html;
   error_page  422              /422.html;
