nginxにBlue/Greenデプロイ用のテストリスナーポートを追加

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -5,6 +5,8 @@ upstream upstream.sample_app {
 server {
   listen       80;
   listen  [::]:80;
+  listen       8080;
+  listen  [::]:8080;
   server_name  localhost;
 
   #location / {
