--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -5,13 +5,15 @@ upstream upstream.sample_app {
 server {
   listen       80;
   listen  [::]:80;
+  listen       8080;
+  listen  [::]:8080;
   server_name  localhost;
 
   #location / {
   #    root   /usr/share/nginx/html;
   #    index  index.html index.htm;
   #}
-  root   /var/www/sample_app/public;  
+  root   /sample_app/public;
 
   error_page  404              /404.html;
   error_page  422              /422.html;
