--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -4,8 +4,6 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
       - release
 
 permissions:
@@ -17,23 +15,47 @@ env:
   AWS_ACCOUNT_ID: ${{ github.ref == 'refs/heads/main' && secrets.AWS_ACCOUNT_ID_PROD || secrets.AWS_ACCOUNT_ID_STG }}
 
 jobs:
-  build_and_push:
+  build_tag:
     runs-on: ubuntu-latest
+
+    timeout-minutes: 10
+
+    outputs:
+      tag: ${{ steps.build-tag.outputs.tag }}
+
+    steps:
+      - name: Build Tag
+        id: build-tag
+        run: |
+          TAG=$(TZ=UTC-9 date '+%Y-%m-%d')-${{ github.sha }}
+          echo "tag=$TAG" >> "$GITHUB_OUTPUT"
+          echo TAG: $TAG
+
+  build_and_push:
+    needs: build_tag
+
+    runs-on: ubuntu-latest
+
+    timeout-minutes: 10
 
     strategy:
       matrix:
         app: ['rails', 'nginx']
         include:
           - app: rails
+            build_context: .
             dockerfile: ./Dockerfile
+            build-args: 'RAILS_ENV=production,NODE_ENV=production'
             image_name: sample_app_rails_web
           - app: nginx
+            build_context: ./docker/nginx
             dockerfile: ./docker/nginx/Dockerfile
+            build-args: ''
             image_name: sample_app_nginx
 
     outputs:
-      image_rails: ${{ steps.set-image.outputs.image_rails }}
-      image_nginx: ${{ steps.set-image.outputs.image_nginx }}
+      image_name_rails: ${{ steps.set-image-name-rails.outputs.image_name_rails }}
+      image_name_nginx: ${{ steps.set-image-name-nginx.outputs.image_name_nginx }}
 
     steps:
       - name: Check out code
@@ -49,13 +71,6 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Build Tag
-        id: build-tag
-        run: |
-          TAG=$(TZ=UTC-9 date '+%Y-%m-%d')-${{ github.sha }}
-          echo "tag=$TAG" >> $GITHUB_OUTPUT
-          echo TAG: $TAG
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
@@ -64,22 +79,36 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
+          context: ${{ matrix.build_context }}
           file: ${{ matrix.dockerfile }}
-          tags: ${{ steps.login-ecr.outputs.registry }}/${{ matrix.image_name }}:${{ steps.build-tag.outputs.tag }}
+          build-args: ${{ matrix.build-args }}
+          tags: ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ matrix.image_name }}:${{ needs.build_tag.outputs.tag }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      - name: Output image tag
-        id: set-image
-        run: |
-          echo "image_${{ matrix.app }}=${{ steps.login-ecr.outputs.registry }}/${{ matrix.image_name }}:${{ steps.build-tag.outputs.tag }}" >> $GITHUB_OUTPUT
+      - name: Output image name for rails
+        id: set-image-name-rails
+        if: matrix.app == 'rails'
+        run: echo "image_name_rails=${{ matrix.image_name }}" >> "$GITHUB_OUTPUT"
+
+      - name: Output image name for nginx
+        id: set-image-name-nginx
+        if: matrix.app == 'nginx'
+        run: echo "image_name_nginx=${{ matrix.image_name }}" >> "$GITHUB_OUTPUT"
 
   render_task_definition_and_deploy:
-    needs: build_and_push
+    needs:
+      - build_tag
+      - build_and_push
 
     runs-on: ubuntu-latest
 
+    timeout-minutes: 30
+
     steps:
+      - name: Check out code
+        uses: actions/checkout@v3
+
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
@@ -96,7 +125,7 @@ jobs:
         with:
           task-definition: task-definition.json
           container-name: ${{ secrets.ECS_CONTAINER_NAME_RAILS }}
-          image: ${{ needs.build_and_push.outputs.image_rails }}
+          image: ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ needs.build_and_push.outputs.image_name_rails }}:${{ needs.build_tag.outputs.tag }}
 
       - name: Modify Amazon ECS task definition for nginx
         id: render-task-definition-nginx
@@ -104,7 +133,7 @@ jobs:
         with:
           task-definition: ${{ steps.render-task-definition-rails.outputs.task-definition }}
           container-name: ${{ secrets.ECS_CONTAINER_NAME_NGINX }}
-          image: ${{ needs.build_and_push.outputs.image_nginx }}
+          image: ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ needs.build_and_push.outputs.image_name_nginx }}:${{ needs.build_tag.outputs.tag }}
 
       - name: Deploy to Amazon ECS service
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
@@ -113,3 +142,6 @@ jobs:
           service: ${{ secrets.ECS_SERVICE_NAME }}
           cluster: ${{ secrets.ECS_CLUSTER_NAME }}
           wait-for-service-stability: true
+          codedeploy-appspec: aws/appspec.json
+          codedeploy-application: ${{ secrets.CODE_DEPLOY_APPLICATION }}
+          codedeploy-deployment-group: ${{ secrets.CODE_DEPLOY_DEPLOYMENT_GROUP }}
