--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -45,7 +45,9 @@ jobs:
           - app: rails
             build_context: .
             dockerfile: ./Dockerfile
-            build-args: 'RAILS_ENV=production,NODE_ENV=production'
+            build-args:
+              - RAILS_ENV=production
+              - NODE_ENV=production
             image_name: sample_app_rails_web
           - app: nginx
             build_context: ./docker/nginx
