--- a/compose.yaml
+++ b/compose.yaml
@@ -15,8 +15,7 @@ services:
       context: .
       target: development
       args:
-        - RAILS_ENV=development
-        - NODE_ENV=development
+        - APP_ENV=development
     image: sample_app_rails_web:dev
     container_name: sample_app_rails_web.dev
     volumes:
