--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -70,6 +70,8 @@ jobs:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
+        with:
+          mask-password: 'true'
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
