CIのrubocop用のファイル差分取得周りのテスト

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,6 +38,9 @@ jobs:
       - name: Get list of changed files
         id: changed-files
         run: |
+          echo "before: ${{ github.event.before }}"
+          echo "after: ${{ github.event.after }}"
+          echo "now sha: ${{ github.sha }}"
           echo "files=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -E '\.rb$|\.rake$' | xargs)" >> $GITHUB_OUTPUT
         continue-on-error: true
 
