CDはCI完了後に実行するように挙動を変更

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -19,6 +19,8 @@ jobs:
     uses: ./.github/workflows/ci.yaml
 
   build_tag:
+    needs: ci
+
     runs-on: ubuntu-latest
 
     timeout-minutes: 10
