--- a/.dockerignore
+++ b/.dockerignore
@@ -4,8 +4,9 @@
 .yarn-integrity
 app/assets/builds/*
 !app/assets/builds/.keep
+bin/release/
 config/master.key
-docker/*
+docker/
 compose.*
 log/*
 !log/.keep
