--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -32,7 +32,12 @@ jobs:
       - name: Build Tag
         id: build-tag
         run: |
-          TAG=$(TZ=Asia/Tokyo date '+%Y-%m-%d')-${{ github.sha }}
+          if [[ "${{ github.ref }}" == 'refs/heads/main' ]]; then
+            VERSION=$(git describe --tags)
+            TAG="${VERSION}-${{ github.sha }}"
+          else
+            TAG=$(TZ=Asia/Tokyo date '+%Y-%m-%d')-${{ github.sha }}
+          fi
           echo "tag=$TAG" >> "$GITHUB_OUTPUT"
           echo TAG: $TAG
 
@@ -104,9 +109,7 @@ jobs:
         run: echo "image_name_nginx=${{ matrix.image_name }}" >> "$GITHUB_OUTPUT"
 
   render_task_definition_and_deploy:
-    needs:
-      - build_tag
-      - build_and_push
+    needs: build_and_push
 
     runs-on: ubuntu-latest
 
