--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -32,7 +32,12 @@ jobs:
       - name: Build Tag
         id: build-tag
         run: |
-          TAG=$(TZ=Asia/Tokyo date '+%Y-%m-%d')-${{ github.sha }}
+          if [[ "${{ github.ref }}" == 'refs/heads/main' ]]; then
+            VERSION=$(git describe --tags)
+            TAG="${VERSION}-${{ github.sha }}"
+          else
+            TAG=$(TZ=Asia/Tokyo date '+%Y-%m-%d')-${{ github.sha }}
+          fi
           echo "tag=$TAG" >> "$GITHUB_OUTPUT"
           echo TAG: $TAG
 
