--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -37,7 +37,7 @@ jobs:
         id: build-tag
         run: |
           if [[ "${{ github.ref }}" == 'refs/heads/main' ]]; then
-            VERSION=$(git describe --tags --abbrev=0)
+            VERSION=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
             TAG="${VERSION}-${{ github.sha }}"
           else
             TAG=$(TZ=Asia/Tokyo date '+%Y-%m-%d')-${{ github.sha }}
