--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,6 +27,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          bundler-cache: true
 
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
