nginxファイル修正

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -7,10 +7,8 @@ server_tokens off;
 #add_header X-Frame-Options SAMEORIGIN; railsで設定されている
 #add_header X-XSS-Protection "1; mode=block"; railsで設定されている
 #add_header X-Content-Type-Options nosniff; railsで設定されている
-#add_header Content-Security-Policy "default-src 'self' https; font-src 'self' https data; img-src 'self' https data; object-src 'none'; script-src 'self' https; style-src 'self' https; report_uri: /csp-violation-report-endpoint"; railsで設定有効化
+#add_header Content-Security-Policy "default-src 'self' https; font-src 'self' https data; img-src 'self' https data; object-src 'none'; script-src 'self' https; style-src 'self' https; report_uri /csp-violation-report-endpoint"; railsで設定有効化
 #add_header strict-transport-security "max-age=31536000; includeSubDomains" railsのproductionで設定有効化
-
-report-uri "/csp-violation-report-endpoint"
 
 server {
   listen       80;
