--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -5,7 +5,7 @@ upstream upstream.sample_app {
 server_tokens off;
 #autoindex off; デフォルトOFF
 #add_header X-Frame-Options SAMEORIGIN; railsで設定されている
-#add_header X-XSS-Protection "1; mode=block"; railsで設定されている
+#add_header X-XSS-Protection "1; mode=block"; 非推奨レガシーヘッダーで、railsではデフォルトで0に設定されている
 #add_header X-Content-Type-Options nosniff; railsで設定されている
 #add_header Content-Security-Policy "default-src 'self' https; font-src 'self' https data; img-src 'self' https data; object-src 'none'; script-src 'self' https; style-src 'self' https; report_uri /csp-violation-report-endpoint"; railsで設定有効化
 #add_header strict-transport-security "max-age=31536000; includeSubDomains" railsのproductionで設定有効化
